[gd_scene load_steps=2 format=3 uid="uid://dtak7aat5yspu"]

[ext_resource type="Script" uid="uid://83pifmalc47k" path="res://levels/level_gen/level_generator.gd" id="1_73hm2"]

[node name="LevelGenerator" type="Node2D"]
script = ExtResource("1_73hm2")
gen_bounds = Vector2i(10, 10)
scale_ = Vector2i(70, 70)

[node name="Origin" type="Marker2D" parent="."]

[node name="BoneHolder" type="Node2D" parent="Origin"]

[node name="FloorHolder" type="Node2D" parent="Origin"]

[node name="WallHolder" type="Node2D" parent="Origin"]
